fixed card alignment issue

--- a/style.css
+++ b/style.css
@@ -475,6 +475,8 @@ h1 {
 
 /* software card*/
 
+
+
 .software {
     background: #000000;
     display: flex;
@@ -509,20 +511,20 @@ h1 {
     width: 400px;
     border-radius: 4px;
     background-image: linear-gradient(to bottom,
-    rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 100%), url('/images/bestb4.jpg');
+    rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 100%);
     background-size: cover;
     position: relative;
     color: #ffffff;
 }
 
-.software__card:nth-child(2) {
+.software__card:nth-child(1) {
     background-image: linear-gradient(to bottom,
-    rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 100%), url('/images/');
+    rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 100%), url('/images/bestb4.jpg');
 }
 
-.software__card:nth-child(3) {
+.software__card:nth-child(2) {
     background-image: linear-gradient(to bottom,
-    rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 100%), url('/images/');
+    rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 100%), url('/images/omega.png');
 }
 
 .software h2 {
